@@ -1,8 +1,12 @@
 #!/usr/bin/make -f
 
+PACKAGE = x11proto-core-dev
+
 # Build html and txt only:
 override_dh_auto_configure:
-	dh_auto_configure -- --with-xmlto --with-fop
+	dh_auto_configure -- \
+		--docdir=\$${prefix}/share/doc/$(PACKAGE) \
+		--with-xmlto --with-fop
 
 # Install in debian/tmp to retain control through dh_install:
 override_dh_auto_install:
