@@ -1,5 +1,5 @@
 usr/include/X11/*
 usr/lib/pkgconfig/xproto.pc /usr/share/pkgconfig
-usr/share/doc/xproto/*.html usr/share/doc/x11proto-core-dev/
-usr/share/doc/xproto/*.txt  usr/share/doc/x11proto-core-dev/
-usr/share/doc/xproto/*.pdf  usr/share/doc/x11proto-core-dev/
+usr/share/doc/x11proto-core-dev/*.html
+usr/share/doc/x11proto-core-dev/*.txt
+usr/share/doc/x11proto-core-dev/*.pdf
