@@ -1,6 +1,7 @@
 x11proto-core (7.0.22-2) UNRELEASED; urgency=low
 
   * Build pdf docs.
+  * Set docdir in configure.
 
  -- Julien Cristau <jcristau@debian.org>  Sat, 14 Apr 2012 18:57:42 +0200
 
